# Job-Search-API

./: .coverage  .coveragerc  .gitignore  .pyproject.toml.un~  DOCKER_SETUP.md  Dockerfile  README.md  pyproject.toml  pyproject.toml~  requirements.txt
.github/workflows/: pipeline.yml
UNKNOWN.egg-info/: SOURCES.txt
app/: .coverage  __init__.py  main.py
app/modules/analyze/: routes.py  service.py
app/modules/jobs/: routes.py  service.py  test_jobs.py
app/modules/stats/: routes.py  service.py
app/tests/: .coverage  __init__.py  conftest.py  test_analyze.py  test_analyze_service.py  test_dummy.py  test_jobs.py  test_main.py  test_stats.py  test_stats_integration.py
tests/: conftest.py  test_analyze.py  test_analyze_service.py  test_stats.py
