[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[project]
name = "job-search-api"
version = "0.1.0"
description = "CS 3321 Job Search API - Backend-only FastAPI service"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.120.2",
    "httpx>=0.28.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "coverage>=7.13.5",
]

# -------------------------
# Pytest configuration
# -------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"

markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

# -------------------------
# Coverage configuration
# -------------------------
[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/.venv/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]